--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,24 @@
 .title {
     font-family: 'Shrikhand', cursive;
     display: flex;
+    justify-content: center;
 }
 
 body {
     font-family: 'Oxygen', sans-serif;
+}
+
+.instructions {
+    display: flex;
+    justify-content: center;
+}
+
+.scoreboard {
+    display: flex;
+    justify-content: space-around;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
 }
